--- a/index.html
+++ b/index.html
@@ -9,71 +9,24 @@
   <body>
     <header class="header-main">
       <h1>
-        Find your <br />
-        favorite comics!
+        Find your favorite <br />
+        Marvel comics!
       </h1>
-      <p></p>
       <div class="header__search-wrapper">
         <input
           type="text"
           class="header__search-input"
-          placeholder="Type Here"
+          placeholder="Spider-Man"
         />
         <button class="header__search-button">Search</button>
       </div>
     </header>
     <section class="random-comics">
       <h2>You might like:</h2>
-      <div class="comics-container">
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-        <div class="comic">
-          <img class="comic-cover" src="cover-test.jpg" />
-          <div class="comic-description">
-            <div class="comic-genre">Action Adventure</div>
-            <div class="comic-name">Titans United: Bloodpact 1</div>
-            <div class="comic-issue-number">#145</div>
-          </div>
-        </div>
-      </div>
+      <div class="comics-container"></div>
     </section>
+    <div class="show-more-wrapper">
+      <button class="show-more-button">Show more</button>
+    </div>
   </body>
 </html>
