add icon for site name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/x-icon" href="spider-head.png" />
+    <title>Comic Search</title>
     <script type="module" src="/main.js" defer></script>
   </head>
   <body>
