changed placeholder to shorter one

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         Marvel comics!
       </h1>
       <div class="header__search-wrapper">
-        <input
-          type="text"
-          class="header__search-input"
-          placeholder="Spider-Man"
-        />
+        <input type="text" class="header__search-input" placeholder="Hulk" />
         <button class="header__search-button">Search</button>
       </div>
     </header>
