--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input
           type="text"
           class="header__search-input"
-          placeholder="Spider-Man"
+          placeholder="Hulk"
         />
         <button class="header__search-button">Search</button>
       </div>
